--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
 
     <!-- LEFT -->
     <div class="header-left">
-      <a href="/lt/pilietybes-egzaminas.html" class="brand-link">
+      <a href="/lt" class="brand-link">
         <img src="/assets/images/lt.svg" alt="Lietuva">
         <div class="brand-title">Lietuvos pilietybės egzaminas</div>
       </a>
@@ -78,7 +78,7 @@
     Lietuvos pilietybės egzaminui.
   </p>
 
-  <a href="/lt/pilietybes-egzaminas.html" class="btn btn-md btn-primary px-4">
+  <a href="/lt" class="btn btn-md btn-primary px-4">
     Grįžti į pagrindinį puslapį
   </a>
 </main>
