--- a/en/about-the-exam.html
+++ b/en/about-the-exam.html
@@ -13,7 +13,7 @@
         content="Detailed information about the Lithuanian citizenship exam: purpose, requirements, and who must take it.">
   <meta name="robots" content="index, follow">
   <link rel="canonical"
-        href="https://lithuania-citizenship-test.com/en/about-the-exam.html">
+        href="https://lithuania-citizenship-test.com/en/about-the-exam">
 
   <!-- ===============================
        OPEN GRAPH
@@ -25,7 +25,7 @@
   <meta property="og:description"
         content="What the Lithuanian citizenship exam is, who it applies to, and why it is mandatory.">
   <meta property="og:url"
-        content="https://lithuania-citizenship-test.com/en/about-the-exam.html">
+        content="https://lithuania-citizenship-test.com/en/about-the-exam">
   <meta property="og:image"
         content="https://lithuania-citizenship-test.com/assets/images/og-default.jpg">
 
