--- a/refund-policy.html
+++ b/refund-policy.html
@@ -13,7 +13,7 @@
         content="Pinigų grąžinimo politika, taikoma perkant prieigą prie Lietuvos pilietybės egzamino pasiruošimo platformos.">
   <meta name="robots" content="index, follow">
   <link rel="canonical"
-        href="https://lithuania-citizenship-test.com/refund-policy.html">
+        href="https://lithuania-citizenship-test.com/refund-policy">
 
   <!-- ===============================
        OPEN GRAPH
@@ -25,7 +25,7 @@
   <meta property="og:description"
         content="Taisyklės dėl atšaukimo ir pinigų grąžinimo perkant skaitmeninę prieigą prie pasiruošimo Lietuvos pilietybės egzaminui.">
   <meta property="og:url"
-        content="https://lithuania-citizenship-test.com/refund-policy.html">
+        content="https://lithuania-citizenship-test.com/refund-policy">
   <meta property="og:image"
         content="https://lithuania-citizenship-test.com/assets/images/og-default.jpg">
 
