--- a/ru/o-ekzamene.html
+++ b/ru/o-ekzamene.html
@@ -13,7 +13,7 @@
         content="Подробная информация об экзамене на гражданство Литвы: цель экзамена, требования и кто обязан его сдавать.">
   <meta name="robots" content="index, follow">
   <link rel="canonical"
-        href="https://lithuania-citizenship-test.com/ru/o-ekzamene.html">
+        href="https://lithuania-citizenship-test.com/ru/o-ekzamene">
 
   <!-- ===============================
        OPEN GRAPH
@@ -25,7 +25,7 @@
   <meta property="og:description"
         content="Что представляет собой экзамен на гражданство Литвы, кому он обязателен и зачем он проводится.">
   <meta property="og:url"
-        content="https://lithuania-citizenship-test.com/ru/o-ekzamene.html">
+        content="https://lithuania-citizenship-test.com/ru/o-ekzamene">
   <meta property="og:image"
         content="https://lithuania-citizenship-test.com/assets/images/og-default.jpg">
 
