--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -11,7 +11,7 @@
         content="Lietuvos pilietybės testo pasiruošimo platformos sąlygos ir nuostatos. Informacija apie paslaugas, prieigą, mokėjimus, grąžinimus ir naudotojų teises.">
   <meta name="robots" content="index, follow">
   <link rel="canonical"
-        href="https://lithuania-citizenship-test.com/terms-and-conditions.html">
+        href="https://lithuania-citizenship-test.com/terms-and-conditions">
 
   <!-- ===============================
        OPEN GRAPH
@@ -23,7 +23,7 @@
   <meta property="og:description"
         content="Teisinės sąlygos, reglamentuojančios naudojimąsi Lietuvos pilietybės testo pasiruošimo platforma.">
   <meta property="og:url"
-        content="https://lithuania-citizenship-test.com/terms-and-conditions.html">
+        content="https://lithuania-citizenship-test.com/terms-and-conditions">
   <meta property="og:image"
         content="https://lithuania-citizenship-test.com/assets/images/og-default.jpg">
 
