--- a/lt/apie-egzamina.html
+++ b/lt/apie-egzamina.html
@@ -13,7 +13,7 @@
         content="Išsami informacija apie Lietuvos pilietybės egzaminą: paskirtį, reikalavimus ir kam jis taikomas.">
   <meta name="robots" content="index, follow">
   <link rel="canonical"
-        href="https://lithuania-citizenship-test.com/lt/apie-egzamina.html">
+        href="https://lithuania-citizenship-test.com/lt/apie-egzamina">
 
   <!-- ===============================
        OPEN GRAPH
@@ -25,7 +25,7 @@
   <meta property="og:description"
         content="Kas yra Lietuvos pilietybės egzaminas, kam jis taikomas ir kodėl jis privalomas.">
   <meta property="og:url"
-        content="https://lithuania-citizenship-test.com/lt/apie-egzamina.html">
+        content="https://lithuania-citizenship-test.com/lt/apie-egzamina">
   <meta property="og:image"
         content="https://lithuania-citizenship-test.com/assets/images/og-default.jpg">
 
