--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
         content="Privatumo politika, paaiškinanti, kaip tvarkomi asmens duomenys naudojantis Lietuvos pilietybės egzamino pasiruošimo platforma.">
   <meta name="robots" content="index, follow">
   <link rel="canonical"
-        href="https://lithuania-citizenship-test.com/privacy-policy.html">
+        href="https://lithuania-citizenship-test.com/privacy-policy">
 
   <!-- ===============================
        OPEN GRAPH
@@ -25,7 +25,7 @@
   <meta property="og:description"
         content="Informacija apie asmens duomenų rinkimą, naudojimą ir apsaugą Lietuvos pilietybės egzamino pasiruošimo platformoje.">
   <meta property="og:url"
-        content="https://lithuania-citizenship-test.com/privacy-policy.html">
+        content="https://lithuania-citizenship-test.com/privacy-policy">
   <meta property="og:image"
         content="https://lithuania-citizenship-test.com/assets/images/og-default.jpg">
 
